# LexaLCM_Pre3

./: .README.md.swp  .gitignore  Acknowlegements.md  CITATION.cff  Features.md  README.md  ToDo.md  _TRAIN.sh  pyproject.toml
Tests/: TestData.py  TestInference.py  TestModel.py
src/: __init__.py
src/LexaLCM/: LCM_Model.py  Main.py  __init__.py
src/LexaLCM/Config/: LCM_Config.py
src/LexaLCM/Config/Pretrain/: Config_Pretrain.yaml  Config_Pretrain_Pre2_001.yaml  Config_Pretrain_Pre2_002.yaml
src/LexaLCM/Data/: DataHandler.py
src/LexaLCM/Data/SpecialConcepts/: EndOfText.safetensors  HelloWorld.safetensors  PaddingSentence.safetensors  StartOfText.safetensors
src/LexaLCM/Utils/: InspectEmbeddings.py  LCMTrainer.py  NaNGradChecker.py  __init__.py
src/Scripts/Data/: ConvertMetaParquet.py  ConvertedMetaParquetVisualizer.py  VerifyEmbeddings.py  VisualizeDataset.py
src/Scripts/Model/: LoadModel.py  SaveModel.py
src/Submodules/: __init__.py
src/Submodules/Pipeline_SONAR/: __init__.py  pyproject.toml
src/Submodules/Pipeline_SONAR/src/: Decoder.py  Encoder.py  __init__.py  pipelines.py
